# BatRobot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arduinobot_description/share/arduinobot_description/: package.sh  (+1 more)
log/: latest_build  latest_list
src/batrobot_alexa/: CMakeLists.txt  package.xml
src/batrobot_alexa/launch/: alexa_interface.launch.py
src/batrobot_alexa/src/: task_server.cpp
src/batrobot_bringup/: CMakeLists.txt
src/batrobot_bringup/launch/: simulated_robot.launch.py
src/batrobot_controller/: CMakeLists.txt  batrobot_controller.xml
src/batrobot_controller/batrobot_controller/: batrobot_driver.py
src/batrobot_controller/src/: batrobot_interface.cpp
src/batrobot_description/: CMakeLists.txt  package.xml
src/batrobot_description/launch/: display.launch.py
src/batrobot_description/meshes/: base.stl  base_plate.stl  gripper_left.stl  joint1.stl  joint2.stl  joint3.stl
src/batrobot_description/rviz/: display.rviz
src/batrobot_description/urdf/: bat_robot_gazebo.xacro  bat_robot_ros2_control.xacro
src/batrobot_firmware/: CMakeLists.txt
src/batrobot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/batrobot_moveit/config/: batrobot.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml
src/batrobot_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
src/batrobot_msgs/: CMakeLists.txt  package.xml
src/batrobot_py_examples/: package.xml  setup.cfg  setup.py
(+120 files in other folders)
