<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>batrobot_alexa</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ginger1nishtha@gmail.com">naveen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>batrobot_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclpy</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend condition="$ROS_DISTRO >= iron">moveit_py</exec_depend>
  <exec_depend>batrobot_moveit</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
